--- a/runs/2020/pydata-praha-jaro/info.yml
+++ b/runs/2020/pydata-praha-jaro/info.yml
@@ -22,11 +22,25 @@ vars:
 
 plan:
 - title: "Úvodní hodina: Představení, Jupyter notebook, základy pandas"
-  slug: first
+  slug: eda1
   date: 2020-01-23
   materials:
   - lesson: pydata/install
   - lesson: pydata/notebook
 #  - lesson: pydata/pandas-core
+
+# - title: "Datové typy a základy vizualizace v pandas"
+#   slug: eda2
+#   date: 2020-01-30
+#   materials:
+#   - lesson: pydata/pandas_types
+#   - lesson: pydata/visualization basics
+
+# - title: "Explorativní analýza a statistika jedné proměnné"
+#   slug: eda3
+#   data: 2020-02-06
+#   materials:
+#   - lesson: pydata/eda-univariate-timeseries
+
 
 
