Definice EDA5 pro kurz
Výchozí varianta, upravte podle libosti a citu

--- a/runs/2020/pydata-praha-jaro/info.yml
+++ b/runs/2020/pydata-praha-jaro/info.yml
@@ -47,6 +47,12 @@ plan:
   date: 2020-02-13
   materials: 
   - lesson: pydata/pandas_correlations
+
+- title: "Explorativní datová analýza a pokročilejší manipulace"
+  slug: eda5
+  date: 2020-02-20
+  materials:
+  - lesson: pydata/pandas_groupby
   
 - title: "Předpokládaný konec kurzu"
   slug: data-project
