intro_regression: coeficients tuned, typo fixed

--- a/lessons/pydata/intro_regression/info.yml
+++ b/lessons/pydata/intro_regression/info.yml
@@ -1,4 +1,4 @@
 title: Ilustrační příklad (regrese)
 style: ipynb
-attribution: Pro PyDataCZ napsal Petra Vidnerová, Roman Diba, 2020.
+attribution: Pro PyDataCZ napsali Petra Vidnerová, Roman Diba, 2020.
 license: cc-by-sa-40
