--- a/lessons/pydata/classification_resume/info.yml
+++ b/lessons/pydata/classification_resume/info.yml
@@ -1,4 +1,4 @@
 title: Klasifikace - Co bych měla po této lekci znát ..
-style: ipynb
-attribution: Pro PyDataCZ napsal Petra Vidnerová, Roman Diba, 2020.
+style: md
+attribution: Pro PyDataCZ napsali Petra Vidnerová a Roman Diba, 2020.
 license: cc-by-sa-40
