pridani kapitoly do seznamu

--- a/runs/2020/pydata-praha-jaro/info.yml
+++ b/runs/2020/pydata-praha-jaro/info.yml
@@ -95,6 +95,12 @@ plan:
   - lesson: pydata/classification_metrics
   - lesson: pydata/classification_resume
 
+- title: Analýza hlavních komponent (PCA)
+  slug: pca
+  date: 2020-05-07
+  materials:
+  - lesson: pydata/pca
+
   
 - title: "Předpokládaný konec kurzu"
   slug: data-project
